# nterviews

./: README.md  ngnix.txt
client/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.vue
client/src/api/: api.js  http.js
server/: pyproject.toml
server/server/: index.py
