[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["高泽民 <gaozemin0509@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-mysqldb = "^2.0.0"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
